--- a/my_tennis_club/members/templates/home.html
+++ b/my_tennis_club/members/templates/home.html
@@ -47,6 +47,7 @@
                     <th>Contact</th>
                     <th>Email</th>
                     <th>Update</th>
+                    <th>Delete</th>
                 </tr>
              </thead>  
              
@@ -61,6 +62,7 @@
                     <td>{{mydata.contact}}</td>
                     <td>{{mydata.email}}</td>
                     <td class="center"><a href="update/{{mydata.id}}" class="btn btn-primary">Update</a></td>
+                    <td class="center"><a href="delete/{{mydata.id}}" class="btn btn-danger">Delete</a></td>
                 </tr>
              </tbody>
              
